fixed some layout issues in mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,9 +3,8 @@
 @import "variables.scss";
 
 
-html, body{
-  width: 100%;
-  height: 100%;
+body{
+  height: 100vh;
   margin: 0;
   background-color: $bg-main-black;
 }
@@ -69,20 +68,24 @@ h4{
 }
 
 .header-block{
-  flex: 0 0 30%;
+  flex: 0 0 20%;
   align-items: center;
   justify-content: center;
 }
 
 .main-block{
-  flex: 1 0 auto;
-  margin: auto;
-  min-width: 288px;
+  flex: 1 1 auto;
+  // margin: auto;
+  // min-width: 288px;
 }
 
 .inner-block{
   position: relative;
   flex: 1;
+  // margin: auto;
+  max-width: 60vh;
+  transform: translate(-50%, 0);
+  left: 50%;
 }
 
 .info-block{
@@ -116,7 +119,7 @@ h4{
 .game-block{
   display: flex;
   flex-wrap: wrap;
-
+  justify-content: center;
   &.pre-game{
 
     .form-group{
@@ -184,25 +187,39 @@ h4{
   border-radius: 4px;
 
   .overlay-inner-block{
+    margin: 0 12px;
     flex: 1;
   }
 
   .header-block,
+  .body-block,
   .footer-block{
-    flex-basis: 27%;
+    // margin: 0;
+  }
+
+  .header-block,
+  .footer-block{
+    flex-basis: 20%;
   }
 
   .body-block{
     flex: 1;
-    margin: 0 23px;
   }
 
   .footer-block{
     align-items: flex-start;
+    text-align: center;
   }
 
   label{
     color: $main-text-color;
+  }
+
+  &.pre-game{
+
+    .overlay-inner-block{
+      margin: 0 23px;
+    }
   }
 }
 
@@ -232,7 +249,7 @@ h4{
   .header-block,
   .main-block,
   .footer-block{
-    margin: 0 12%;
+    // margin: 0 12%;
   }
 
   .header-block{
